<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.guerrazzi.trainreservation.view.viewmodel.ReservationViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_reservation"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/red_train"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="4dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_origin"
                    app:hintTextColor="@color/red_train">

                    <AutoCompleteTextView
                        android:id="@+id/ed_auto_origin"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="20dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_dest"
                    app:hintTextColor="@color/red_train">

                    <AutoCompleteTextView
                        android:id="@+id/ed_auto_dest"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="20dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/ed_date_departure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/lbl_dateDeparture"
                        android:onClick="showDateTimePicker" />

                    <Button
                        android:layout_marginLeft="50dp"
                        android:layout_width="wrap_content"
                        android:onClick="getSolutions"
                        android:background="@color/red_train"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_search_solution"/>

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}">
        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />
    </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.obsNoResult ? View.VISIBLE : View.GONE}">
            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:src="@mipmap/train_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_result" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}"
            android:id="@+id/solution_recycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</layout>